sys/compat/linux/linux_stats.c
@@ -632,10 +632,14 @@ linux_fstatat64(struct thread *td, struct linux_fstatat64_args *args)
 	int error, dfd, flag;
 	struct stat buf;
 
-	if (args->flag & ~LINUX_AT_SYMLINK_NOFOLLOW)
+	if (args->flag & ~(LINUX_AT_SYMLINK_NOFOLLOW | LINUX_AT_EMPTY_PATH)) {
+		linux_msg(td, "fstatat64 unsupported flag 0x%x", args->flag);
 		return (EINVAL);
+	}
 	flag = (args->flag & LINUX_AT_SYMLINK_NOFOLLOW) ?
 	    AT_SYMLINK_NOFOLLOW : 0;
+	flag |= (args->flag & LINUX_AT_EMPTY_PATH) ?
+	    AT_EMPTY_PATH : 0;
 
 	dfd = (args->dfd == LINUX_AT_FDCWD) ? AT_FDCWD : args->dfd;
 	if (!LUSECONVPATH(td)) {
@@ -661,10 +665,15 @@ linux_newfstatat(struct thread *td, struct linux_newfstatat_args *args)
 	int error, dfd, flag;
 	struct stat buf;
 
-	if (args->flag & ~LINUX_AT_SYMLINK_NOFOLLOW)
+	if (args->flag & ~(LINUX_AT_SYMLINK_NOFOLLOW | LINUX_AT_EMPTY_PATH)) {
+		linux_msg(td, "fstatat unsupported flag 0x%x", args->flag);
 		return (EINVAL);
+	}
+
 	flag = (args->flag & LINUX_AT_SYMLINK_NOFOLLOW) ?
 	    AT_SYMLINK_NOFOLLOW : 0;
+	flag |= (args->flag & LINUX_AT_EMPTY_PATH) ?
+	    AT_EMPTY_PATH : 0;
 
 	dfd = (args->dfd == LINUX_AT_FDCWD) ? AT_FDCWD : args->dfd;
 	if (!LUSECONVPATH(td)) {
